feat: improve dashboard and theme switching
